# 2026-world-cup-dash

./: .dev.vars.example  .gitignore  package-lock.json  package.json  schema.sql  tsconfig.json  vitest.config.ts  wrangler.jsonc
docs/: phase-0-findings.md
migrations/: 0002_sync_lock_and_error.sql  0003_nullable_knockout_teams.sql
scripts/: build-teams-2026.mjs  country-aliases.mjs  probe.mjs  seed-demo.sql  seed-teams.mjs
src/: index.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: router.ts
src/db/: queries.ts
src/lib/: bracket.ts  dates.ts
src/sync/: apifootball.ts  mappers.ts  mutex.ts  openfootball.ts  sync.ts
test/: api.test.ts  apifootball.test.ts  apply-migrations.ts  bracket.test.ts  dates.test.ts  db.test.ts  mappers.test.ts  openfootball.test.ts  sync.test.ts
test/fixtures/: fixtures-by-date.json  match-stats.json  players.json  standings.json  teams-2026.json  teams-by-league.json  teams-countries.json
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  test-setup.ts
web/src/components/: Bracket.tsx  GroupStrip.tsx  Header.tsx  MatchCard.tsx  StandingsTable.tsx  TeamDetailPanel.tsx  TeamHoverCard.tsx  TodaysGames.tsx  (+1 more)
web/test/: App.test.tsx  Bracket.test.tsx  GroupStrip.test.tsx  MatchCard.test.tsx  StandingsTable.test.tsx  TeamDetailPanel.test.tsx  calendar.test.ts  favorites.test.ts  standings.test.ts  timezone.test.ts
(+6 files in other folders)
